TODO:
* add tests
* add a copy time elements from timestamp function?
* clean up time elements string function, reuse code from libewf_date_time_values.c

20151228
* updated dependencies

20150101
* 2015 update

20141229
* updated dpkg files

20141227
* changes for Borland C compiler

20141018
* worked on stand-alone version

20141014
* changes for deployment

20141010
* worked on utility scripts

20140915
* changes for project site move

20140730
* updated dpkg files

20140505
* fixes to build static library with mingw and cygwin

20140211
* Bug fixes for the WINAPI version with thanks to Bernhard Zach

20140201
* Bug fixes

20140119
* Bug fixes

20140105
* updated dependencies
* 2014 update
* worked on elements and timestamp functionality
* updated msvscpp files

20130609
* fix in .pc.in file

20130509
* small changes

20130404
* updated dependencies

20130403
* updated dependencies

20130113
* updated msvscpp files

20130106
* Worked on initial version

20130105
* Initial version split off from libewf and libcsystem
