@@ -1,4 +1,4 @@
 Acknowledgements: libcdatetime
 
-Copyright (C) 2006-2016, Joachim Metz <joachim.metz@gmail.com>
+Copyright (C) 2013-2016, Joachim Metz <joachim.metz@gmail.com>
 
