@@ -2,7 +2,7 @@
 name: "libcdatetime"
 status: "alpha"
 authors: ["Joachim Metz <joachim.metz@gmail.com>"]
-year_of_creation: "2006"
+year_of_creation: "2013"
 download_url: "https://github.com/libyal/libcdatetime/releases"
 git_url: "https://github.com/libyal/libcdatetime.git"
 features: []
