@@ -24,7 +24,7 @@ BEGIN
       VALUE "FileDescription",		"Library to support cross-platform C date and time functions\0"
       VALUE "FileVersion",		"@VERSION@" "\0"
       VALUE "InternalName",		"libcdatetime.dll\0"
-      VALUE "LegalCopyright",		"(C) 2006-2016, Joachim Metz <joachim.metz@gmail.com>\0"
+      VALUE "LegalCopyright",		"(C) 2013-2016, Joachim Metz <joachim.metz@gmail.com>\0"
       VALUE "OriginalFilename",		"libcdatetime.dll\0"
       VALUE "ProductName",		"libcdatetime\0"
       VALUE "ProductVersion",		"@VERSION@" "\0"
