@@ -104,7 +104,7 @@ Please report bugs of any kind on the project issue tracker: https://github.com/
 .Sh AUTHOR
 These man pages are generated from "libcdatetime.h".
 .Sh COPYRIGHT
-Copyright (C) 2006-2016, Joachim Metz <joachim.metz@gmail.com>.
+Copyright (C) 2013-2016, Joachim Metz <joachim.metz@gmail.com>.
 
 This is free software; see the source for copying conditions.
 There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
